--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"clean": "rm -rf ./build && mkdir build",
-		"pre-build": "cp -R src/assets build/assets",
+		"pre-build": "node pre-process.js",
 		"build": "npm run clean && npm run pre-build && node index.js"
 	},
 	"repository": {
@@ -19,6 +19,14 @@
 	},
 	"homepage": "https://github.com/rysolv/markdown_ssg#readme",
 	"dependencies": {
-		"marked": "^4.0.12"
+		"fs-extra": "^10.1.0",
+		"i": "^0.3.7",
+		"imagemin": "^7.0.1",
+		"imagemin-jpegoptim": "^7.0.0",
+		"imagemin-pngquant": "^9.0.2",
+		"imagemin-webp": "^6.0.0",
+		"marked": "^4.0.12",
+		"npm": "^8.8.0",
+		"yargs": "^17.4.1"
 	}
 }
